# serve

./: Cargo.toml  README.md  flake.nix
src/: main.rs  not-found.html
