[package]
name = "serve"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
axum = "0.8.1"
clap = { version = "4.5.28", features = ["derive"] }
colored = "3.0.0"
open = "5.3.2"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
